' PlantUML: tool per la generazione di UML (.png) in modo testuale
' supporta diversi diagrammi UML 
' (es. diagramma delle classi, di sequenza...)
' esempio file class_diagram.puml per generare UML a destra
' download (jar): http://plantuml.com/download
' documentazione: http://plantuml.com/class-diagram
' estensione per VS Code (PlantUML): https://marketplace.visualstudio.com/items?itemName=jebbs.plantuml
' (premi ALT-D per aprire la preview in VS Code)

@startuml ChainOfResponsibility

' START STYLE
skinparam {
	'monochrome true
	'shadowing false
	'classBackgroundColor white
	'noteBackgroundColor white
	classAttributeIconSize 0
	'linetype polyline
	'linetype ortho
}
hide circle
' END STYLE

title ChainOfResponsibility

class client {
}

class HelpDesk << abstract >>{
 - successor: HelpDesk
 + sendTicket(ticket: String)
}

class HDLivello1 {
    + sendTicket(ticket: String)
}

class HDLivello2 {
    + sendTicket(ticket: String)
}

class HDLivello3 {
    + sendTicket(ticket: String)
}

' definisco le relazioni
HelpDesk <-left- client
HelpDesk -right-> HelpDesk
HDLivello1 -up-|> HelpDesk
HDLivello2 -up-|> HelpDesk
HDLivello3 -up-|> HelpDesk
@enduml